// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageMobile snapshots > empty state — top bar with hamburger, editor placeholder 1`] = `
<div>
  <div
    class="app svelte-183wtch"
  >
    <div
      class="topbar svelte-7juyry"
      role="banner"
    >
      <div
        class="left svelte-7juyry"
      >
        <button
          class="icon-btn svelte-7juyry"
          title="Menu"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </button>
      </div>
       
      <div
        class="right svelte-7juyry"
      >
        <button
          class="icon-btn svelte-yic9pk"
          title="Info"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
        </button>
         
        <button
          class="icon-btn svelte-yic9pk"
          title="Settings"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M19.14,12.94c0.04-0.31,0.06-0.63,0.06-0.94c0-0.31-0.02-0.63-0.06-0.94l2.03-1.58c0.18-0.14,0.23-0.41,0.12-0.61 l-1.92-3.32c-0.12-0.22-0.37-0.29-0.59-0.22l-2.39,0.96c-0.5-0.38-1.03-0.7-1.62-0.94L14.4,2.81c-0.04-0.24-0.24-0.41-0.48-0.41 h-3.84c-0.24,0-0.43,0.17-0.47,0.41L9.25,5.35C8.66,5.59,8.12,5.92,7.63,6.29L5.24,5.33c-0.22-0.08-0.47,0-0.59,0.22L2.74,8.87 C2.62,9.08,2.66,9.34,2.86,9.48l2.03,1.58C4.84,11.37,4.82,11.69,4.82,12s0.02,0.63,0.06,0.94l-2.03,1.58 c-0.18,0.14-0.23,0.41-0.12,0.61l1.92,3.32c0.12,0.22,0.37,0.29,0.59,0.22l2.39-0.96c0.5,0.38,1.03,0.7,1.62,0.94l0.36,2.54 c0.05,0.24,0.24,0.41,0.48,0.41h3.84c0.24,0,0.44-0.17,0.47-0.41l0.36-2.54c0.59-0.24,1.13-0.56,1.62-0.94l2.39,0.96 c0.22,0.08,0.47,0,0.59-0.22l1.92-3.32c0.12-0.22,0.07-0.47-0.12-0.61L19.14,12.94z M12,15.6c-1.98,0-3.6-1.62-3.6-3.6 s1.62-3.6,3.6-3.6s3.6,1.62,3.6,3.6S13.98,15.6,12,15.6z"
            />
          </svg>
        </button>
        <!---->
      </div>
    </div>
    <!---->
     
    <div
      class="content svelte-183wtch"
    >
      <main
        class="main svelte-183wtch"
      >
        <div
          class="editor svelte-1ctqrjb"
        >
          <!---->
          <!---->
           
          <div
            class="empty-state svelte-1ctqrjb"
          >
            <div
              class="node-graph svelte-1ctqrjb"
            >
              <svg
                class="svelte-1ctqrjb"
                height="140"
                viewBox="0 0 180 140"
                width="180"
              >
                <line
                  class="svelte-1ctqrjb"
                  stroke="var(--color-overlay)"
                  stroke-width="1.5"
                  x1="90"
                  x2="40"
                  y1="50"
                  y2="100"
                />
                <line
                  class="svelte-1ctqrjb"
                  stroke="var(--color-overlay)"
                  stroke-width="1.5"
                  x1="90"
                  x2="140"
                  y1="50"
                  y2="100"
                />
                <line
                  class="svelte-1ctqrjb"
                  stroke="var(--color-overlay)"
                  stroke-width="1.5"
                  x1="90"
                  x2="90"
                  y1="50"
                  y2="20"
                />
                <line
                  class="svelte-1ctqrjb"
                  stroke="var(--color-overlay)"
                  stroke-dasharray="4 4"
                  stroke-width="1.5"
                  x1="40"
                  x2="140"
                  y1="100"
                  y2="100"
                />
                <circle
                  class="node node-center svelte-1ctqrjb"
                  cx="90"
                  cy="50"
                  fill="var(--color-accent)"
                  r="8"
                />
                <circle
                  class="node node-left svelte-1ctqrjb"
                  cx="40"
                  cy="100"
                  fill="var(--color-secondary)"
                  r="6"
                />
                <circle
                  class="node node-right svelte-1ctqrjb"
                  cx="140"
                  cy="100"
                  fill="var(--color-secondary)"
                  r="6"
                />
                <circle
                  class="node node-top svelte-1ctqrjb"
                  cx="90"
                  cy="20"
                  fill="var(--color-accent)"
                  opacity="0.6"
                  r="5"
                />
              </svg>
            </div>
             
            <p
              class="empty-title svelte-1ctqrjb"
            >
              Your knowledge awaits
            </p>
             
            <p
              class="empty-hint svelte-1ctqrjb"
            >
              Open a file from the sidebar to start editing
            </p>
          </div>
          <!---->
        </div>
        <!---->
      </main>
    </div>
     
    <!---->
    <!---->
     
    <!---->
    <!---->
  </div>
   
  <!---->
   
  <!---->
  
  <!---->
   
  <!---->
  
  <!---->
  
  
</div>
`;

exports[`PageMobile snapshots > loading state — spinner shown in editor area 1`] = `
<div>
  <div
    class="app svelte-183wtch"
  >
    <div
      class="topbar svelte-7juyry"
      role="banner"
    >
      <div
        class="left svelte-7juyry"
      >
        <button
          class="icon-btn svelte-7juyry"
          title="Menu"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </button>
      </div>
       
      <div
        class="right svelte-7juyry"
      >
        <button
          class="icon-btn svelte-yic9pk"
          title="Info"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
        </button>
         
        <button
          class="icon-btn svelte-yic9pk"
          title="Settings"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M19.14,12.94c0.04-0.31,0.06-0.63,0.06-0.94c0-0.31-0.02-0.63-0.06-0.94l2.03-1.58c0.18-0.14,0.23-0.41,0.12-0.61 l-1.92-3.32c-0.12-0.22-0.37-0.29-0.59-0.22l-2.39,0.96c-0.5-0.38-1.03-0.7-1.62-0.94L14.4,2.81c-0.04-0.24-0.24-0.41-0.48-0.41 h-3.84c-0.24,0-0.43,0.17-0.47,0.41L9.25,5.35C8.66,5.59,8.12,5.92,7.63,6.29L5.24,5.33c-0.22-0.08-0.47,0-0.59,0.22L2.74,8.87 C2.62,9.08,2.66,9.34,2.86,9.48l2.03,1.58C4.84,11.37,4.82,11.69,4.82,12s0.02,0.63,0.06,0.94l-2.03,1.58 c-0.18,0.14-0.23,0.41-0.12,0.61l1.92,3.32c0.12,0.22,0.37,0.29,0.59,0.22l2.39-0.96c0.5,0.38,1.03,0.7,1.62,0.94l0.36,2.54 c0.05,0.24,0.24,0.41,0.48,0.41h3.84c0.24,0,0.44-0.17,0.47-0.41l0.36-2.54c0.59-0.24,1.13-0.56,1.62-0.94l2.39,0.96 c0.22,0.08,0.47,0,0.59-0.22l1.92-3.32c0.12-0.22,0.07-0.47-0.12-0.61L19.14,12.94z M12,15.6c-1.98,0-3.6-1.62-3.6-3.6 s1.62-3.6,3.6-3.6s3.6,1.62,3.6,3.6S13.98,15.6,12,15.6z"
            />
          </svg>
        </button>
        <!---->
      </div>
    </div>
    <!---->
     
    <div
      class="content svelte-183wtch"
    >
      <main
        class="main svelte-183wtch"
      >
        <div
          class="loading svelte-183wtch"
        >
          <div
            class="spinner svelte-183wtch"
          />
        </div>
        <!---->
      </main>
    </div>
     
    <!---->
    <!---->
     
    <!---->
    <!---->
  </div>
   
  <!---->
   
  <!---->
  
  <!---->
   
  <!---->
  
  <!---->
  
  
</div>
`;

exports[`PageMobile snapshots > note open — top bar, editor showing file content 1`] = `
<div>
  <div
    class="app svelte-183wtch"
  >
    <div
      class="topbar svelte-7juyry"
      role="banner"
    >
      <div
        class="left svelte-7juyry"
      >
        <button
          class="icon-btn svelte-7juyry"
          title="Menu"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </button>
      </div>
       
      <div
        class="right svelte-7juyry"
      >
        <button
          class="icon-btn svelte-yic9pk"
          title="Info"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
        </button>
         
        <button
          class="icon-btn svelte-yic9pk"
          title="Settings"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M19.14,12.94c0.04-0.31,0.06-0.63,0.06-0.94c0-0.31-0.02-0.63-0.06-0.94l2.03-1.58c0.18-0.14,0.23-0.41,0.12-0.61 l-1.92-3.32c-0.12-0.22-0.37-0.29-0.59-0.22l-2.39,0.96c-0.5-0.38-1.03-0.7-1.62-0.94L14.4,2.81c-0.04-0.24-0.24-0.41-0.48-0.41 h-3.84c-0.24,0-0.43,0.17-0.47,0.41L9.25,5.35C8.66,5.59,8.12,5.92,7.63,6.29L5.24,5.33c-0.22-0.08-0.47,0-0.59,0.22L2.74,8.87 C2.62,9.08,2.66,9.34,2.86,9.48l2.03,1.58C4.84,11.37,4.82,11.69,4.82,12s0.02,0.63,0.06,0.94l-2.03,1.58 c-0.18,0.14-0.23,0.41-0.12,0.61l1.92,3.32c0.12,0.22,0.37,0.29,0.59,0.22l2.39-0.96c0.5,0.38,1.03,0.7,1.62,0.94l0.36,2.54 c0.05,0.24,0.24,0.41,0.48,0.41h3.84c0.24,0,0.44-0.17,0.47-0.41l0.36-2.54c0.59-0.24,1.13-0.56,1.62-0.94l2.39,0.96 c0.22,0.08,0.47,0,0.59-0.22l1.92-3.32c0.12-0.22,0.07-0.47-0.12-0.61L19.14,12.94z M12,15.6c-1.98,0-3.6-1.62-3.6-3.6 s1.62-3.6,3.6-3.6s3.6,1.62,3.6,3.6S13.98,15.6,12,15.6z"
            />
          </svg>
        </button>
        <!---->
      </div>
    </div>
    <!---->
     
    <div
      class="content svelte-183wtch"
    >
      <main
        class="main svelte-183wtch"
      >
        <div
          class="editor svelte-1ctqrjb"
        >
          <div
            class="editor-header svelte-1ctqrjb"
          >
            <div
              class="left svelte-1ctqrjb"
            >
              <!---->
               
              <button
                class="filename svelte-1ctqrjb"
              >
                Meeting Notes.md 
                <!---->
              </button>
              <!---->
            </div>
             
            <div
              class="right svelte-1ctqrjb"
            >
              <div
                class="mode-toggle svelte-1ctqrjb"
              >
                <button
                  class="toggle-btn svelte-1ctqrjb active"
                >
                  <svg
                    class="svelte-1ctqrjb"
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      class="svelte-1ctqrjb"
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                   Edit
                </button>
                 
                <button
                  class="toggle-btn svelte-1ctqrjb"
                >
                  <svg
                    class="svelte-1ctqrjb"
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      class="svelte-1ctqrjb"
                      d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                    />
                  </svg>
                   Preview
                </button>
              </div>
               
              <!---->
            </div>
          </div>
           
          <div
            class="editor-body svelte-1ctqrjb"
          >
            <div
              class="codemirror-container svelte-9m8fhl"
            >
              <div
                class="cm-editor ͼ1 ͼ2 ͼp"
              >
                <div
                  aria-live="polite"
                  class="cm-announced"
                />
                <div
                  class="cm-scroller"
                  tabindex="-1"
                >
                  <div
                    aria-hidden="true"
                    class="cm-gutters cm-gutters-before"
                    style="min-height: 196px; position: sticky;"
                  >
                    <div
                      class="cm-gutter cm-lineNumbers"
                    >
                      <div
                        class="cm-gutterElement"
                        style="height: 0px; visibility: hidden; pointer-events: none;"
                      >
                        99
                      </div>
                      <div
                        class="cm-gutterElement"
                        style="height: 15.099476439790577px;"
                      >
                        1
                      </div>
                      <div
                        class="cm-gutterElement"
                        style="height: 14px;"
                      >
                        2
                      </div>
                      <div
                        class="cm-gutterElement"
                        style="height: 14.659685863874346px;"
                      >
                        3
                      </div>
                      <div
                        class="cm-gutterElement"
                        style="height: 14px;"
                      >
                        4
                      </div>
                      <div
                        class="cm-gutterElement"
                        style="height: 15.465968586387435px;"
                      >
                        5
                      </div>
                      <div
                        class="cm-gutterElement"
                        style="height: 16.418848167539267px;"
                      >
                        6
                      </div>
                      <div
                        class="cm-gutterElement"
                        style="height: 15.319371727748692px;"
                      >
                        7
                      </div>
                      <div
                        class="cm-gutterElement"
                        style="height: 14px;"
                      >
                        8
                      </div>
                      <div
                        class="cm-gutterElement"
                        style="height: 15.099476439790577px;"
                      >
                        9
                      </div>
                      <div
                        class="cm-gutterElement"
                        style="height: 14px;"
                      >
                        10
                      </div>
                      <div
                        class="cm-gutterElement"
                        style="height: 15.979057591623036px;"
                      >
                        11
                      </div>
                      <div
                        class="cm-gutterElement"
                        style="height: 16.272251308900522px;"
                      >
                        12
                      </div>
                      <div
                        class="cm-gutterElement"
                        style="height: 15.832460732984293px;"
                      >
                        13
                      </div>
                    </div>
                  </div>
                  <div
                    aria-multiline="true"
                    autocapitalize="off"
                    autocorrect="off"
                    class="cm-content cm-lineWrapping"
                    contenteditable="true"
                    data-language="markdown"
                    role="textbox"
                    spellcheck="false"
                    style="tab-size: 4;"
                    translate="no"
                    writingsuggestions="false"
                  >
                    <div
                      class="cm-line cm-activeLine"
                    >
                      <span
                        class="ͼ7 ͼ5"
                      >
                        #
                      </span>
                      <span
                        class="ͼ7"
                      >
                         Meeting Notes
                      </span>
                    </div>
                    <div
                      class="cm-line"
                    >
                      <br />
                    </div>
                    <div
                      class="cm-line"
                    >
                      <span
                        class="ͼ7 ͼ5"
                      >
                        ##
                      </span>
                      <span
                        class="ͼ7"
                      >
                         Agenda
                      </span>
                    </div>
                    <div
                      class="cm-line"
                    >
                      <br />
                    </div>
                    <div
                      class="cm-line"
                    >
                      <span
                        class="ͼ5"
                      >
                        -
                      </span>
                       Review Q1 progress
                    </div>
                    <div
                      class="cm-line"
                    >
                      <span
                        class="ͼ5"
                      >
                        -
                      </span>
                       Discuss new plugin architecture
                    </div>
                    <div
                      class="cm-line"
                    >
                      <span
                        class="ͼ5"
                      >
                        -
                      </span>
                       Plan next sprint
                    </div>
                    <div
                      class="cm-line"
                    >
                      <br />
                    </div>
                    <div
                      class="cm-line"
                    >
                      <span
                        class="ͼ7 ͼ5"
                      >
                        ##
                      </span>
                      <span
                        class="ͼ7"
                      >
                         Action Items
                      </span>
                    </div>
                    <div
                      class="cm-line"
                    >
                      <br />
                    </div>
                    <div
                      class="cm-line"
                    >
                      <span
                        class="ͼ5"
                      >
                        1.
                      </span>
                       Update roadmap by Friday
                    </div>
                    <div
                      class="cm-line"
                    >
                      <span
                        class="ͼ5"
                      >
                        2.
                      </span>
                       Create PR for search feature
                    </div>
                    <div
                      class="cm-line"
                    >
                      <span
                        class="ͼ5"
                      >
                        3.
                      </span>
                       Schedule design review
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </main>
    </div>
     
    <!---->
    <!---->
     
    <!---->
    <!---->
  </div>
   
  <!---->
   
  <!---->
  
  <!---->
   
  <!---->
  
  <!---->
  
  
</div>
`;
